crates/crucible-cli/src/tui/components/snapshots/crucible_cli__tui__components__input_box__tests__multiline_tests__input_box_multiline_trailing_newline.snap
---
source: crates/crucible-cli/src/tui/components/input_box.rs
expression: terminal.backend()
---
"                                                                                "
" > one                                                                          "
"   two                                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
